<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvListItem"
                android:layout_width="0dp"
                android:layout_height="@dimen/icon_img_36"
                android:layout_margin="@dimen/card_margin"
                android:layout_weight="8"
                android:gravity="center_vertical"
                android:text="@string/list_entry"
                android:textSize="@dimen/text_16" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin"
                android:layout_weight="2">

                <ImageView
                    android:id="@+id/ivGarbageBin"
                    android:layout_width="@dimen/icon_img_36"
                    android:layout_height="@dimen/icon_img_36"
                    android:contentDescription="@string/delete"
                    android:padding="@dimen/icon_pad_4"
                    app:srcCompat="@drawable/ic_delete_black_24dp" />

                <ImageView
                    android:id="@+id/ivEditPencil"
                    android:layout_width="@dimen/icon_img_36"
                    android:layout_height="@dimen/icon_img_36"
                    android:contentDescription="@string/edit"
                    android:padding="@dimen/icon_pad_4"
                    app:srcCompat="@drawable/ic_mode_edit_black_24dp" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>