<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin"
                android:text="@string/repeat_on_days" />

            <LinearLayout
                android:id="@+id/llDays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_margin"
                android:orientation="horizontal"
                android:weightSum="7">

                <TextView
                    android:id="@+id/tvSunday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_margin"
                    android:layout_weight="1"
                    android:background="@drawable/tv_day_border"
                    android:gravity="center"
                    android:padding="@dimen/card_margin"
                    android:text="S" />

                <TextView
                    android:id="@+id/tvMonday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_margin"
                    android:layout_weight="1"
                    android:background="@drawable/tv_day_border"
                    android:gravity="center"
                    android:padding="@dimen/card_margin"
                    android:text="M" />

                <TextView
                    android:id="@+id/tvTuesday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_margin"
                    android:layout_weight="1"
                    android:background="@drawable/tv_day_border"
                    android:gravity="center"
                    android:padding="@dimen/card_margin"
                    android:text="T" />

                <TextView
                    android:id="@+id/tvWednesday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_margin"
                    android:layout_weight="1"
                    android:background="@drawable/tv_day_border"
                    android:gravity="center"
                    android:padding="@dimen/card_margin"
                    android:text="W" />

                <TextView
                    android:id="@+id/tvThursday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_margin"
                    android:layout_weight="1"
                    android:background="@drawable/tv_day_border"
                    android:gravity="center"
                    android:padding="@dimen/card_margin"
                    android:text="T" />

                <TextView
                    android:id="@+id/tvFriday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_margin"
                    android:layout_weight="1"
                    android:background="@drawable/tv_day_border"
                    android:gravity="center"
                    android:padding="@dimen/card_margin"
                    android:text="F" />

                <TextView
                    android:id="@+id/tvSaturday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_margin"
                    android:layout_weight="1"
                    android:background="@drawable/tv_day_border"
                    android:gravity="center"
                    android:padding="@dimen/card_margin"
                    android:text="S" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_margin"
                    android:layout_weight="8"
                    android:text="Notify on a specific date" />

                <Switch
                    android:id="@+id/swDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_margin"
                    android:layout_weight="2" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/card_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvDD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_margin"
                    android:background="@drawable/tv_day_border"
                    android:padding="@dimen/card_margin"
                    android:text="23" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/card_margin"
                    android:paddingTop="@dimen/card_margin"
                    android:text="-" />

                <TextView
                    android:id="@+id/tvMM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_margin"
                    android:background="@drawable/tv_day_border"
                    android:padding="@dimen/card_margin"
                    android:text="12" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/card_margin"
                    android:paddingTop="@dimen/card_margin"
                    android:text="-" />

                <TextView
                    android:id="@+id/tvYYYY"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_margin"
                    android:background="@drawable/tv_day_border"
                    android:padding="@dimen/card_margin"
                    android:text="1923" />
            </LinearLayout>
        </LinearLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_margin"
                    android:layout_weight="8"
                    android:text="@string/set_morning_hours" />

                <Switch
                    android:id="@+id/swMorning"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_margin"
                    android:layout_weight="2" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/card_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvMorningStart"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="0" />

                <SeekBar
                    android:id="@+id/sbMorning"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:max="12"
                    android:progress="1" />

                <TextView
                    android:id="@+id/tvMorningEnd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="12" />
            </LinearLayout>
        </LinearLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_margin"
                    android:layout_weight="8"
                    android:text="@string/set_noon_hours" />

                <Switch
                    android:id="@+id/swNoon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_margin"
                    android:layout_weight="2" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/card_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvNoonStart"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="12" />

                <SeekBar
                    android:id="@+id/sbNoon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:max="18"
                    android:progress="1" />

                <TextView
                    android:id="@+id/tvNoonEnd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="18" />
            </LinearLayout>
        </LinearLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_margin"
                    android:layout_weight="8"
                    android:text="@string/set_dinner_hours" />

                <Switch
                    android:id="@+id/swNight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_margin"
                    android:layout_weight="2" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/card_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvNightStart"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="18" />

                <SeekBar
                    android:id="@+id/sbNight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:max="24"
                    android:progress="1" />

                <TextView
                    android:id="@+id/tvNightEnd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="24" />
            </LinearLayout>
        </LinearLayout>


    </android.support.v7.widget.CardView>


</LinearLayout>